# CG2023

./: CMakeLists.txt
DEMO2D/: CMakeLists.txt
L01/: CMakeLists.txt
LAB04/: CMakeLists.txt
LAB04/LAB04/: face.h  raytracer_students.cpp
LABORATORI/L02/DEMO2D/: DEMO2D.cpp
LABORATORI/L03/: CMakeLists.txt
LABORATORI/L04/LAB04/: face.cpp  raytracer_students.cpp
lab03/: CMakeLists.txt
lab05 blender/: scena.blend  scena.blend1
